--- a/Report/results.tex
+++ b/Report/results.tex
@@ -7,18 +7,18 @@ The overall structure of our program looks as follows. We wrote our own \texttt{
 	\centering
 	\caption{Overview Results}
 	\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|} \hline
-		\multicolumn{1}{|p{2cm}|}{\vspace*{.4 cm}\# training points} &
-		\multicolumn{1}{p{2cm}|}{One-vs-All uniquely classfied correctly linear} &
-		\multicolumn{1}{p{2cm}|}{One-vs-All with barycenters linear} &
-		\multicolumn{1}{p{2cm}|}{One-vs-All uniquely classfied correctly Gaussian} &
-		\multicolumn{1}{p{2cm}|}{One-vs-All w/ barycenters Gaussian} &
-		\multicolumn{1}{p{2cm}|}{\vspace*{.4 cm}ECOC linear} &
-		\multicolumn{1}{p{2cm}|}{\vspace*{.4 cm}ECOC Gaussian} \\ \hline \hline
+		\multicolumn{1}{|p{1.8cm}|}{\vspace*{.7 cm}\# training points} &
+		\multicolumn{1}{p{1.8cm}|}{One-vs-All uniquely classfied correctly linear} &
+		\multicolumn{1}{p{1.8cm}|}{\vspace*{.25 cm}One-vs-All with barycenters linear} &
+		\multicolumn{1}{p{1.8cm}|}{One-vs-All uniquely classfied correctly Gaussian} &
+		\multicolumn{1}{p{1.8cm}|}{\vspace*{.0 cm}One-vs-All with barycenters Gaussian} &
+		\multicolumn{1}{p{1.8cm}|}{\vspace*{.7 cm}ECOC linear} &
+		\multicolumn{1}{p{1.8cm}|}{\vspace*{.7 cm}ECOC Gaussian} \\ \hline \hline
 		500	& 65.9\% & 74.1\% & 75.4\% & 83.3\% & 74.2\% & 87.4\% \\ \hline
 		1000	& 68.2\% & 75.0\% & 84.3\% & 89.0\% & 78.0\% & 92.7\% \\ \hline
 		2000	& 70.2\% & 76.4\% & 89.8\% & 91.9\% & 77.8\% & 94.3\% \\ \hline
-		5000	& 70.0\% & 73.8\% & 889\% & 91.6\% & 82.0\% & 95.2\% \\ \hline
-		10000	& 64.6\% & 67.5 & 88.0\% & 90,6\% & 82.5\% & 95.4\% \\ \hline
+		5000	& 70.0\% & 73.8\% & 88.9\% & 91.6\% & 82.0\% & 95.2\% \\ \hline
+		10000	& 64.6\% & 67.5\% & 88.0\% & 90.6\% & 82.5\% & 95.4\% \\ \hline
 	\end{tabular}
 \end{table}
 
