--- a/Report/results.tex
+++ b/Report/results.tex
@@ -5,15 +5,15 @@ The overall structure of our program looks as follows. We wrote our own \texttt{
 
 \begin{table}[ht!]
 	\centering
-	\caption{Overview Results}
+	\caption{\textbf{Overview Results of Correctly Classified Digits}}
 	\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|} \hline
 		\multicolumn{1}{|p{1.8cm}|}{\vspace*{.7 cm}\# training points} &
-		\multicolumn{1}{p{1.8cm}|}{One-vs-All uniquely classfied correctly linear} &
-		\multicolumn{1}{p{1.8cm}|}{\vspace*{.25 cm}One-vs-All with barycenters linear} &
-		\multicolumn{1}{p{1.8cm}|}{One-vs-All uniquely classfied correctly Gaussian} &
-		\multicolumn{1}{p{1.8cm}|}{\vspace*{.0 cm}One-vs-All with barycenters Gaussian} &
-		\multicolumn{1}{p{1.8cm}|}{\vspace*{.7 cm}ECOC linear} &
-		\multicolumn{1}{p{1.8cm}|}{\vspace*{.7 cm}ECOC Gaussian} \\ \hline \hline
+		\multicolumn{1}{p{1.8cm}|}{\vspace*{.05 cm}One-vs-All uniquely classfied, linear} &
+		\multicolumn{1}{p{1.8cm}|}{\vspace*{.15 cm}One-vs-All with barycenters, linear} &
+		\multicolumn{1}{p{1.8cm}|}{\vspace*{.05 cm}One-vs-All uniquely classfied, gaussian} &
+		\multicolumn{1}{p{1.8cm}|}{\vspace*{.0 cm}One-vs-All with barycenters, gaussian} &
+		\multicolumn{1}{p{1.8cm}|}{\vspace*{.7 cm}ECOC, linear} &
+		\multicolumn{1}{p{1.8cm}|}{\vspace*{.7 cm}ECOC, gaussian} \\ \hline \hline
 		500	& 65.9\% & 74.1\% & 75.4\% & 83.3\% & 74.2\% & 87.4\% \\ \hline
 		1000	& 68.2\% & 75.0\% & 84.3\% & 89.0\% & 78.0\% & 92.7\% \\ \hline
 		2000	& 70.2\% & 76.4\% & 89.8\% & 91.9\% & 77.8\% & 94.3\% \\ \hline
