--- a/SVM_sklearn.ipynb
+++ b/SVM_sklearn.ipynb
@@ -43,6 +43,7 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -85,6 +86,7 @@
    "cell_type": "code",
    "execution_count": 80,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -169,6 +171,7 @@
    "cell_type": "code",
    "execution_count": 77,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -238,6 +241,7 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -248,7 +252,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def scalar_product(v1,v2):\n",
@@ -288,6 +294,7 @@
    "cell_type": "code",
    "execution_count": 81,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -348,6 +355,7 @@
    "cell_type": "code",
    "execution_count": 82,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -420,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
