--- a/Benchmark_of_SMOs.ipynb
+++ b/Benchmark_of_SMOs.ipynb
@@ -85,7 +85,7 @@
    },
    "outputs": [],
    "source": [
-    "no_train = 100\n",
+    "no_train = 200\n",
     "train = train_images[:no_train]\n",
     "train_l = train_labels[:no_train]\n",
     "bench_l = bench_labels[:no_train]\n",
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -559,23 +559,23 @@
     "    stop = timeit.default_timer()\n",
     "    plot_array_ssp[4,notraincounter] = stop - start\n",
     "    \n",
-    "np.savetxt('plot_array_gauss.txt', plot_array_gauss, delimiter=',')\n",
-    "np.savetxt('plot_array_ssp.txt', plot_array_ssp, delimiter=',')"
+    "np.save('plot_array_gauss', plot_array_gauss)\n",
+    "np.save('plot_array_ssp', plot_array_ssp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "no_train_arr2 = np.arange(800,1300,100)\n",
+    "no_train_arr2 = np.arange(800,2100,100)\n",
     "\n",
     "\n",
-    "plot_array_gauss2 = np.empty((5,np.size(no_train_arr2)))\n",
-    "plot_array_ssp2 = np.empty((5,np.size(no_train_arr2)))\n",
+    "plot_array_gauss2 = np.empty((2,np.size(no_train_arr2)))\n",
+    "plot_array_ssp2 = np.empty((2,np.size(no_train_arr2)))\n",
     "\n",
     "\n",
     "# Gaussian kernel\n",
@@ -612,26 +612,7 @@
     "    stop = timeit.default_timer()\n",
     "    plot_array_gauss2[1,notraincounter] = stop - start\n",
     "    \n",
-    "    # wss1 without K\n",
-    "    from smo_wss1_noK import smo\n",
-    "    start = timeit.default_timer()\n",
-    "    smo(train,bench_l,C,kernel,tol,'no', kernel_identifier = 'gaussian kernel')\n",
-    "    stop = timeit.default_timer()\n",
-    "    plot_array_gauss2[2,notraincounter] = stop - start\n",
     "    \n",
-    "    # wss2\n",
-    "    from smo_wss2 import smo\n",
-    "    start = timeit.default_timer()\n",
-    "    smo(train,bench_l,C,kernel,tol,'no', kernel_identifier = 'gaussian kernel')\n",
-    "    stop = timeit.default_timer()\n",
-    "    plot_array_gauss2[3,notraincounter] = stop - start\n",
-    "    \n",
-    "    # Platt\n",
-    "    from smo_platt import smo\n",
-    "    start = timeit.default_timer()\n",
-    "    smo(np.transpose(train),bench_l,C,kernel,tol,'no', kernel_identifier = 'gaussian kernel')\n",
-    "    stop = timeit.default_timer()\n",
-    "    plot_array_gauss2[4,notraincounter] = stop - start\n",
     "\n",
     "    \n",
     "# standard scalar product\n",
@@ -665,51 +646,19 @@
     "    stop = timeit.default_timer()\n",
     "    plot_array_ssp2[1,notraincounter] = stop - start\n",
     "    \n",
-    "    # wss1 without K\n",
-    "    from smo_wss1_noK import smo\n",
-    "    start = timeit.default_timer()\n",
-    "    smo(train,bench_l,C,kernel,tol,'no', kernel_identifier = 'standard scalar product')\n",
-    "    stop = timeit.default_timer()\n",
-    "    plot_array_ssp2[2,notraincounter] = stop - start\n",
     "    \n",
-    "    # wss2\n",
-    "    from smo_wss2 import smo\n",
-    "    start = timeit.default_timer()\n",
-    "    smo(train,bench_l,C,kernel,tol,'no', kernel_identifier = 'standard scalar product')\n",
-    "    stop = timeit.default_timer()\n",
-    "    plot_array_ssp2[3,notraincounter] = stop - start\n",
-    "    \n",
-    "    # Platt\n",
-    "    from smo_platt import smo\n",
-    "    start = timeit.default_timer()\n",
-    "    smo(np.transpose(train),bench_l,C,kernel,tol,'no', kernel_identifier = 'standard scalar product')\n",
-    "    stop = timeit.default_timer()\n",
-    "    plot_array_ssp2[4,notraincounter] = stop - start\n",
-    "    \n",
-    "np.savetxt('plot_array_gauss2.txt', plot_array_gauss, delimiter=',')\n",
-    "np.savetxt('plot_array_ssp2.txt', plot_array_ssp, delimiter=',')"
+    "np.save('plot_array_gauss2', plot_array_gauss2)\n",
+    "np.save('plot_array_ssp2', plot_array_ssp2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[100 200 300 400 500 600 700]\n",
-      "[ 800  900 1000 1100 1200]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.arange(100,800,100))\n",
-    "print(np.arange(800,1300,100))"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
