--- a/Report/Presentation.tex
+++ b/Report/Presentation.tex
@@ -1,17 +1,11 @@
 %!TEX program = xelatex
-\documentclass[10pt, compress]{beamer}
+\documentclass[12pt, compress]{beamer}
 \usetheme{Szeged}
 \usecolortheme{beaver}
 
 \usepackage{booktabs}
 \usepackage[scale=2]{ccicons}
-%\usepackage{minted}
-%\usepackage{comment}
-%\usepgfplotslibrary{dateplot}
-%\usepackage[main=german]{babel}  
-%\usemintedstyle{trac}
 \usepackage[utf8]{inputenc}
-
 
 %Font1:
 %\usepackage{sansmathfonts}
@@ -20,6 +14,15 @@
 %Font2:
 \usepackage[light,condensed,math]{kurier}
 \usepackage[T1]{fontenc}
+
+\usepackage{graphicx}
+
+\newcommand{\titleA}{Introduction to Our Data Set}
+\newcommand{\titleB}{Our Approach}
+\newcommand{\titleC}{Sequential Minimal Optimization (SMO)}
+\newcommand{\titleD}{Multi-Class Classification}
+\newcommand{\titleE}{Results \& Conclusions}
+
 
 
 \title{Digit Recognition}
@@ -33,115 +36,121 @@
 
 
 \begin{document}
-
-\noindent
-
 \maketitle
 
-\begin{frame}[fragile]
-  \frametitle{Overview}
-
-\textbf{Outline} 
+\begin{frame}
+  \frametitle{Outline} 
   \begin{enumerate}
-        \item Introduction \& Problem Statement \item Support Vector Machines (SVM) \item Sequential Minimal Optimization (SMO) \item Multi-Class Classification \item Results \& Conclusions
-      \end{enumerate}
+	  \item \titleA
+	  \item \titleB
+	  \item \titleC
+	  \item \titleD
+	  \item \titleE
+  \end{enumerate}
 \end{frame}
 
 
 \begin{frame}
-  \frametitle{Introduction \& Problem Statement}
-\textbf{Main Goal:} train algorithm to recognize handwritten digits
-
-\begin{figure}[h]
-	\includegraphics[width=1\textwidth, center]{Digits2}
-	\caption{Visualization of eight of these images}
-\end{figure}
-
-\textbf{Data:}
-\begin{itemize}
-	\item 42,000 grayscale 
-\end{itemize}
-\end{frame}
-
-
-
-
-\begin{frame}
-  \frametitle{Introduction \& Problem Statement}
-
-\end{frame}
-
-
-\begin{frame}
-\frametitle{Support Vector Machines (SVM)}
-
-\end{frame}
-
-
-\begin{frame}
-\frametitle{Support Vector Machines (SVM)}
-
-\end{frame}
-
-
-\begin{frame}
-\frametitle{Sequential Minimal Optimization (SMO)}
-
-\end{frame}
-
-
-\begin{frame}
-\frametitle{Multi-Class Classification}
-
-\textbf{Standard Modell}
-\begin{itemize}
-\item SVMs are binary classifiers but we needed to be able to differentiate among 10 classes
-\item there are different ways to tackle this problem, we decided to mainly focus on two different approaches: 
-\end{itemize}
-\begin{enumerate}
-\item One-vs-All 
-\item Error Correcting Output Codes
-\end{enumerate}
-\end{frame}
-
-
-
-\begin{frame}[fragile]
-\frametitle{Multi-Class Classification}
-
-\textbf{\alert{1. One-Vs-All}}
-
+  \frametitle{\titleA}
+	\textbf{\alert{Main Goal:}} train algorithm to recognize handwritten digits
+	\begin{figure}[h]
+		\includegraphics[width=1\textwidth]{Digits2}
+		%\caption{Visualization of eight of the data points}
+	\end{figure}
+	\textbf{\alert{Data:}}
+	\begin{itemize}
+		\item 42,000 greyscale images
+		\item 28 by 28 pixels each
+		\item partitioned into ten classes
+	\end{itemize}
 \end{frame}
 
 
 
 \begin{frame}
-\frametitle{Multi-Class Classification}
+  \frametitle{\titleB}
+	\visible<2>{
+		\begin{figure}[h]
+		\includegraphics[width=1\textwidth]{../Plots_linear_mit_Pauls_SVM}
+		\caption{Visualizing the concept of linear soft-margin SVMs}
+		\end{figure}
+	}
+	\visible<1,3->{
+	blabla test
+	}
+\end{frame}
 
-%\textbf{These 1:
-%}
-\textbf{\alert{2. Error Correcting Output Codes}} 
-\textbf{Idea: }
 
-\begin{table}[ht!]
-	\centering
-	\label{Codewords}
-	\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|}
-		\hline
-		Class	& $f_0$ & $f_1$ & $f_2$ & $f_3$ & $f_4$ & $f_5$ & $f_6$ & $f_7$ & $f_8$ & $f_9$ & $f_{10}$ & $f_{11}$ & $f_{12}$ & $f_{13}$ & $f_{14}$ \\ \hline \hline
-		0	& 1 & 1 & -1 & -1 & -1 & -1 & 1 & -1 & 1 & -1 & -1 & 1 & 1 & -1 & 1 \\ \hline
-		1	& -1 & -1 & 1 & 1 & 1 & 1 & -1 & 1 & -1 & 1 & 1 & -1 & -1 & 1 & -1 \\ \hline
-		2	& 1 & -1 & -1 & 1 & -1 & -1 & -1 & 1 & 1 & 1 & 1 & -1 & 1 & -1 & 1 \\ \hline
-		3	& -1 & -1 & 1 & 1 & -1 & 1 & 1 & 1 & -1 & -1 & -1 & -1 & 1 & -1 & 1 \\ \hline
-		4	& 1 & 1 & 1 & -1 & 1 & -1 & 1 & 1 & -1 & -1 & 1 & 1 & -1 & -1 & 1 \\ \hline
-		5	& -1 & 1 & -1 & -1 & 1 & 1 & -1 & -1 & 1 & 1 & -1 & -1 & -1 & -1 & 1 \\ \hline
-		6	& 1 & -1 & 1 & 1 & 1 & -1 & -1 & -1 & -1 & 1 & -1 & 1 & -1 & -1 & 1 \\ \hline
-		7	& -1 & -1 & -1 & 1 & 1 & 1 & 1 & -1 & 1 & -1 & 1 & 1 & -1 & -1 & 1 \\ \hline
-		8	& 1 & 1 & -1 & 1 & -1 & 1 & 1 & -1 & -1 & 1 & -1 & -1 & -1 & 1 & 1 \\ \hline
-		9	& -1 & 1 & 1 & 1 & -1 & -1 & -1 & -1 & 1 & -1 & 1 & -1 & -1 & 1 & 1 \\ \hline
-	\end{tabular}
-\end{table}  
+\begin{frame}
+  \frametitle{\titleB}
+	
+\end{frame}
 
+
+\begin{frame}
+  \frametitle{\titleC}
+
+\end{frame}
+
+
+\begin{frame}
+  \frametitle{\titleD}
+%	\textbf{\alert{Standard Modell}}
+	\begin{itemize}
+		\item \textbf{Problem:} SVMs are binary classifiers $\leftrightarrow$ we have 10 classes
+		\item we focus on two different approaches: 
+		\begin{enumerate}
+			\item One-vs-All 
+			\item Error-Correcting Output Codes
+		\end{enumerate}
+	\end{itemize}
+\end{frame}
+
+
+
+\begin{frame}
+  \frametitle{\titleD}
+	\textbf{\alert{1. One-Vs-All}}
+\end{frame}
+
+
+
+\begin{frame}
+  \frametitle{\titleD}
+
+	%\textbf{These 1:
+	%}
+	\textbf{\alert{2. Error Correcting Output Codes}}\\
+	\textbf{Idea:} Combine 15 different SVMs, each one trained on a distinct relabeling of the data.
+	\begin{table}[ht!]
+		\centering
+		\label{Codewords}
+		\scalebox{0.8}{
+		\input{tabular_codewords}
+		}
+	\end{table}  
+\end{frame}
+
+
+\begin{frame}
+  \frametitle{\titleE}
+	\begin{table}[ht!]
+		\centering
+		\scalebox{0.7}{
+		\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|} \hline
+			%\input{tabular_results_head}
+			\multicolumn{1}{|p{1.8cm}|}{\vspace*{.7 cm}\# training points} &
+			\multicolumn{1}{p{1.8cm}|}{\vspace*{0 cm}\hbox{One-vs-All} uniquely classfied, linear} &
+			\multicolumn{1}{p{1.8cm}|}{\vspace*{0 cm}\hbox{One-vs-All} with bary- centers, linear} &
+			\multicolumn{1}{p{1.8cm}|}{\vspace*{0 cm}\hbox{One-vs-All} uniquely classfied, Gaussian} &
+			\multicolumn{1}{p{1.8cm}|}{\vspace*{0 cm}\hbox{One-vs-All} with bary-centers, Gaussian} &
+			\multicolumn{1}{p{1.8cm}|}{\vspace*{.7 cm}ECOC, \hbox{linear}} &
+			\multicolumn{1}{p{1.8cm}|}{\vspace*{.7 cm}ECOC, Gaussian} \\ \hline \hline
+			\input{tabular_results_body_presentation}
+		\end{tabular}
+		}
+		\caption{Correctly Classified Digits}
+	\end{table}
 \end{frame}
 
 
