--- a/Documents/Uni/SoSe2017/MachineLearning/project/Digits_with_NN.ipynb
+++ b/Documents/Uni/SoSe2017/MachineLearning/project/Digits_with_NN.ipynb
@@ -283,7 +283,9 @@
     "for i in range(no_plots):\n",
     "    plt.subplot(100+no_plots*10+i+1)\n",
     "    plot_image(mytrain_images[i])\n",
-    "write"
+    "\n",
+    "file=write(open('similar_digits.jpg', 'w'))\n",
+    "file.write()"
    ]
   },
   {
