--- a/Report/tabular_codewords.tex
+++ b/Report/tabular_codewords.tex
@@ -1,4 +1,4 @@
-\begin{tabular}{|c|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|}
+\begin{tabular}{|c|r|r|r|r|r|r|r|r|r|r|r|r|r|r|r|}
 	\hline
 	Class	& $f_0$ & $f_1$ & $f_2$ & $f_3$ & $f_4$ & $f_5$ & $f_6$ & $f_7$ & $f_8$ & $f_9$ & $f_{10}$ & $f_{11}$ & $f_{12}$ & $f_{13}$ & $f_{14}$ \\ \hline \hline
 	0	& 1 & 1 & -1 & -1 & -1 & -1 & 1 & -1 & 1 & -1 & -1 & 1 & 1 & -1 & 1 \\ \hline
