--- a/Report/Presentation.tex
+++ b/Report/Presentation.tex
@@ -68,14 +68,20 @@
 
 \begin{frame}
 	\frametitle{\titleB}
-	We want to use the concept of SVMs
+	We want to use the concept of SVMs.
+	
+	\begin{figure}[h]
+		\includegraphics[width=0.7\textwidth]{svm_examplegraphic}
+	\end{figure}
+	
+	
 	\begin{itemize}
-		\item \textbf{Problem I:} SVMs are binary classifiers $\leftrightarrow$ we have 10 classes
-		\item We focus on two different approaches: 
-		\begin{enumerate}
-			\item One-vs-All 
-			\item Error-Correcting Output Codes
-		\end{enumerate}
+		\item \textbf{Problem I:} SVMs are binary classifiers 
+		%\item We focus on two different approaches: 
+		%\begin{enumerate}
+		%	\item One-vs-All 
+		%	\item Error-Correcting Output Codes
+		%\end{enumerate}
 		\item \textbf{Problem II:} Need to solve optimization problem
 	\end{itemize}
 
@@ -102,42 +108,6 @@
 		\
 	\end{enumerate}
 \end{frame}
-
-
-
-\begin{frame}
-	\frametitle{\titleB}
-
-	\begin{figure}[h]
-		\includegraphics[width=1\textwidth]{../Plots_linear_mit_Pauls_SVM}
-		\caption{Visualizing the concept of linear soft-margin SVMs}
-	\end{figure}
-
-
-\end{frame}
-
-
-\begin{frame}
-	\frametitle{\titleB}
-	\begin{enumerate}
-		\item Implement solver for our QP
-		\begin{itemize}
-			\item 3 versions
-		\end{itemize}
-		\item Implement basic SVM algorithm
-		\begin{itemize}
-			\item linear kernel / Gaussian kernel
-			\item Parameter optimization
-		\end{itemize}
-		\item Combine individual SVMs in different ways
-		\begin{itemize}
-			\item 3 versions
-		\end{itemize}
-		\item Validate and compare results 
-		\
-	\end{enumerate}
-\end{frame}
-
 
 \begin{frame}
   \frametitle{\titleC}
